--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.html
@@ -5,6 +5,7 @@
     <title></title>
     <link rel="stylesheet" href="hajo.css">
     <link href='https://fonts.googleapis.com/css?family=Alatsi' rel='stylesheet'>
+    <script src="hetedik.js"></script>
 </head>
 <body>
     <div id="külső">
@@ -14,17 +15,17 @@
 
         <div id="középső">
             <div id="válaszok">
-                <div id="válasz1" class="kerdes kattintható jó">Válasz 1</div>
-                <div id="válasz2" class="kerdes kattintható rossz">Válasz 2</div>
-                <div id="válasz3" class="kerdes kattintható rossz">Válasz 3</div>
+                <div id="válasz1" class="kerdes kattintható" onclick="Válasz(1)">Válasz 1</div>
+                <div id="válasz2" class="kerdes kattintható" onclick="Válasz(2)">Válasz 2</div>
+                <div id="válasz3" class="kerdes kattintható" onclick="Válasz(3)">Válasz 3</div>
             </div>
             <div id="kép">
                 <img id="kép1" src="https://szoft1.comeback.hu/hajo/teszt-0050.jpg" />
             </div>
         </div>
         <div id="vezérlő">
-            <div class="gomb kattintható">Vissza</div>
-            <div class="gomb kattintható">Előre</div>
+            <div onclick="visszakattint()" class="gomb kattintható">Vissza</div>
+            <div onclick="elorekattint()" class="gomb kattintható">Előre</div>
         </div>
     </div>
 </body>
