--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.html
@@ -15,17 +15,17 @@
 
         <div id="középső">
             <div id="válaszok">
-                <div id="válasz1" class="kerdes kattintható" onclick="Válasz(1)">Válasz 1</div>
-                <div id="válasz2" class="kerdes kattintható" onclick="Válasz(2)">Válasz 2</div>
-                <div id="válasz3" class="kerdes kattintható" onclick="Válasz(3)">Válasz 3</div>
+                <div id="válasz1" class="kérdés kattintható" onclick="Válasz(1)">Válasz 1</div>
+                <div id="válasz2" class="kérdés kattintható" onclick="Válasz(2)">Válasz 2</div>
+                <div id="válasz3" class="kérdés kattintható" onclick="Válasz(3)">Válasz 3</div>
             </div>
             <div id="kép">
                 <img id="kép1" src="https://szoft1.comeback.hu/hajo/teszt-0050.jpg" />
             </div>
         </div>
         <div id="vezérlő">
-            <div onclick="visszakattint()" class="gomb kattintható">Vissza</div>
-            <div onclick="elorekattint()" class="gomb kattintható">Előre</div>
+            <div onclick="Vissza()" class="gomb kattintható">Vissza</div>
+            <div onclick="Előre()" class="gomb kattintható">Előre</div>
         </div>
     </div>
 </body>
