--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="hajo.css">
     <link href='https://fonts.googleapis.com/css?family=Alatsi' rel='stylesheet'>
     <script src="hetedik.js"></script>
+    <!--<script src="tizedik.js"></script>-->
 </head>
 <body>
     <div id="külső">
