--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.html
@@ -8,25 +8,26 @@
     <script src="hetedik.js"></script>
     <!--<script src="tizedik.js"></script>-->
 </head>
-<body>
-    <div id="külső">
-        <div id="kérdés_szöveg">
-            Kérdés szövege
-        </div>
+    <body>
+        <div id="külső">
+            <div id="kérdés_szöveg">
+                Kérdés szövege
+            </div>
 
-        <div id="középső">
-            <div id="válaszok">
-                <div id="válasz1" class="kérdés kattintható" onclick="Válasz(1)">Válasz 1</div>
-                <div id="válasz2" class="kérdés kattintható" onclick="Válasz(2)">Válasz 2</div>
-                <div id="válasz3" class="kérdés kattintható" onclick="Válasz(3)">Válasz 3</div>
+            <div id="középső">
+                <div id="válaszok">
+                    <div id="válasz1" onclick="válaszok(1)" class="kerdes kattintható">Válasz1</div>
+                    <div id="válasz2" onclick="válaszok(2)" class="kerdes kattintható">Válasz2</div>
+                    <div id="válasz3" onclick="válaszok(3)" class="kerdes kattintható">Válasz3</div>
+                </div>
+                <div id="kép">
+                    <img id="kép1" src="https://szoft1.comeback.hu/hajo/teszt-0050.jpg" />
+                </div>
             </div>
-            <div id="kép">
-                <img id="kép1" src="https://szoft1.comeback.hu/hajo/teszt-0050.jpg" />
+            <div id="vezérlő">
+                <div id="vissza_gomb" class="gomb kattintható">Vissza</div>
+                <div id="előre_gomb" class="gomb kattintható">Előre</div>
             </div>
         </div>
-        <div id="vezérlő">
-            <div onclick="Vissza()" class="gomb kattintható">Vissza</div>
-            <div onclick="Előre()" class="gomb kattintható">Előre</div>
-        </div>
-    </div>
-</body>
+    </body>
+    </html>
